tests/neg-custom-args/captures/reaches2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches2.scala:10:10 -------------------------------------
10 |  ps.map((x, y) => compose1(x, y)) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |          Found:    (x$1: (A ->{c} A, A ->{c} A)) ->{c} A^'s1 ->{c} A^'s2
   |          Required: ((A ->{c} A, A ->{c} A)) -> A^'s3 ->'s4 A^'s5
   |
   |          Note that capability `c` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
